--- a/Server/pump_control.py.save.1
+++ b/Server/pump_control.py.save.1
@@ -3,7 +3,7 @@ import json
 from time import sleep
 from threading import Timer
 import datetime
-pump_enable  = True                       # 
+pump_enable  = True
 pump_mode = "Level"
 pump_status = 0
 
@@ -21,21 +21,21 @@ def pump_on(timer=None):                  # what does timer =None mean??
         pass
 
     with open("controls.json","r") as fp: # open Jason file in read mode
-        controls = json.load(fp)          # read Jason file contents to  'cont
+        controls = json.load(fp)          # read Jason file contents to  'controls'		
 
     print "Pump On"
-    controls['control-pump-main-tank'] = 1 # Set Pump
+    controls['control-pump-main-tank'] = 1 # Set Pump to ON 
 
     with open("controls.json","w") as fp:  # open Jasone file in write mode
         json.dump(controls,fp,indent = 4)  #  WHAT IS THIS?  write to Jason file? what does json.dump do? what is indent?
 
     if timer:
-        timer.start()
+        timer.start()                      # start the timer to measure the pump ON time
 
 
 def pump_off(timer=None):
     global pump_status
-    pump_status = 0                       # WHAT IS THIS? is it needed to clear pump_enable? if not, why was that needed in 'pump_on? 
+    pump_status = 0
     with open("controls.json","r") as fp:
         controls = json.load(fp)
 
@@ -84,7 +84,7 @@ def blower_off(timer=None):
     if timer:
         timer.start()
 
-def close_valves():
+def close_valves():                                 # close both valves - write '1' to the controls.json file
 
     with open("controls.json","r") as fp:
         controls = json.load(fp)
@@ -96,7 +96,7 @@ def close_valves():
     with open("controls.json","w") as fp:
         json.dump(controls,fp,indent = 4)
 
-def open_valves():
+def open_valves():                                 # open both the valves - write 0 to the json file 
 
     with open("controls.json","r") as fp:
         controls = json.load(fp)
@@ -108,11 +108,11 @@ def open_valves():
     with open("controls.json","w") as fp:
         json.dump(controls,fp,indent = 4)
 
-def enable_pump():
+def enable_pump():                               # what does this do other than setting pump_enable??
     global pump_enable
     pump_enable = True
 
-def get_water_level(sensors,mode = "avg"):
+def get_water_level(sensors,mode = "avg"):       # get a waterlevel value from the two sensors based on the 'mode'
     if mode=="avg":
         return int((sensors['sensor-water-level-buffer-tank-2']+sensors['sensor-water-level-buffer-tank-1'])/2)
     elif mode=="min":
@@ -126,10 +126,10 @@ def get_water_level(sensors,mode = "avg"):
     else:
         raise RuntimeError("Unknown mode for get water level")
 
-if pump_mode == "Time":                          # WHAT IS THIS?? is this start of main code??
+if pump_mode == "Time":
     pump_on()
 elif pump_mode == "Level":
-    pump_off()                                   # so, for the first time, pump_enable is not set!! is tha ok?
+    pump_off()
     open_valves()
 
 print_log = True
@@ -137,13 +137,12 @@ while True:
     try:
 
         with open("configuration.json","r") as fp:
-            configuration = json.load(fp)       # read the  configuration jason file
+            configuration = json.load(fp)
 
         if print_log:
-            log_dict = {}                       # WHAT IS THIS?? data strucutre??
+            log_dict = {}
             with open("sensors.json","r") as fp:
-                sensor_string = fp.read()
-                sensors = json.loads(sensor_string)
+                sensors = json.load(fp)
                 log_dict['sensor-water-level-buffer-tank-1'] = sensors['sensor-water-level-buffer-tank-1']
                 log_dict['sensor-water-level-buffer-tank-2'] = sensors['sensor-water-level-buffer-tank-2']
             with open("controls.json","r") as fp:
@@ -152,17 +151,17 @@ while True:
                 log_dict['control-valve-raft-tank-2'] = controls['control-valve-raft-tank-2']
                 log_dict['control-pump-main-tank'] = controls['control-pump-main-tank']
             with open("system.log","a+") as fp:
-                fp.write(json.dumps(log_dict)+"\n")  # read sensor values and valve status from jsn files and write to system.log file
+                fp.write(json.dumps(log_dict)+"\n")
 
         print_log = not print_log
-        pump_on_time = configuration["time-on-pump-main-tank"]       # read pump and hold settings from configuration jsn file
+        pump_on_time = configuration["time-on-pump-main-tank"]
         pump_off_time = configuration["time-off-pump-main-tank"]
         water_hold_time = configuration["time-valve-water-hold"]
         water_drain_time = configuration["time-valve-water-drain"]
 
         now = datetime.datetime.now()
 
-        if pump_enable and pump_mode=="Time":           # when is the first time pump_enable is set?? esp. in Level mode??
+        if pump_enable and pump_mode=="Time":
             timer_on = Timer(pump_off_time,pump_on)
             timer_off = Timer(pump_on_time,pump_off,[timer_on,])
             timer_off.start()
@@ -179,8 +178,7 @@ while True:
 
         if pump_enable and pump_mode=="Level":
             with open("sensors.json","r") as fp:
-                sensor_string = fp.read()
-                sensors = json.loads(sensor_string)
+                sensors = json.load(fp)
             if pump_status == 0 and get_water_level(sensors,'first')<configuration["water-level-buffer-tank-minimum"]:
                 timer_close_valves= Timer(1,close_valves)
                 timer_on_pump = Timer(water_drain_time,pump_on,[timer_close_valves,])
